<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civPersonalEditProfile"
        android:layout_width="@dimen/sizeCircleViewViewInformation"
        android:layout_height="@dimen/sizeCircleViewViewInformation"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTopViewInformation"
        android:src="@drawable/personal_image_example" />

    <EditText
        android:id="@+id/txtFirstNameEditProfile"
        style="@style/viewInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstNameViewInformation" />

    <EditText
        android:id="@+id/txtLastNameEditProfile"
        style="@style/viewInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastNameViewInformation" />

    <EditText
        android:id="@+id/txtJobTypeEditProfile"
        style="@style/viewInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jobTypeViewInformation" />

    <EditText
        android:id="@+id/txtEmailEditProfile"
        style="@style/viewInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailViewInformation" />

    <EditText
        android:id="@+id/txtPhoneNumberEditProfile"
        style="@style/viewInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumberViewInformation" />

    <EditText
        android:id="@+id/txtIdentityCardNumberEditProfile"
        style="@style/viewInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/identityCardNumberViewInformation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopViewInformation"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdateEditProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartViewInformation"
            android:layout_weight="2"
            android:background="@drawable/no_sharp_corner_garbage_color"
            android:text="@string/updateEditProfile" />

        <ImageButton
            android:id="@+id/ibBackPressEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/marginStartViewInformation"
            android:layout_marginEnd="@dimen/marginEndViewInformation"
            android:background="@drawable/no_sharp_corner_back_icon"
            android:src="@drawable/back_icon" />

    </LinearLayout>
</LinearLayout>