<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cvDetailsEmployee"
                style="@style/details"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/personal_image_example" />

            <TextView
                style="@style/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detailDetails"
                android:textColor="@color/greenGarbageDetails"
                android:textSize="@dimen/textSizeDetailDetails"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopImageDetails"
            android:layout_weight="1"
            android:src="@drawable/detail" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopDetails"
        android:background="@color/descriptionDetails"
        android:gravity="center"
        android:text="@string/descriptionDetails"
        android:textSize="@dimen/textSizeDetails" />

    <TextView
        android:id="@+id/tvTimeDetailsEmployee"
        style="@style/detailDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/alarm"
        android:drawablePadding="@dimen/paddingDrawableDetails"
        android:gravity="center"
        android:text="@string/timeDetails"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeDetails" />

    <TextView
        android:id="@+id/tvVehicleDetailsEmployee"
        style="@style/detailDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/vehicle"
        android:drawablePadding="@dimen/paddingDrawableDetails"
        android:gravity="center"
        android:text="@string/vehicleDetails"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeDetails" />

    <TextView
        android:id="@+id/tvRouteDetailsEmployee"
        style="@style/detailDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/route"
        android:drawablePadding="@dimen/paddingDrawableDetails"
        android:gravity="center"
        android:text="@string/routeDetails"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeDetails" />

    <TextView
        android:id="@+id/tvMCPDetailsEmployee"
        style="@style/detailDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/location_pin"
        android:drawablePadding="@dimen/paddingDrawableDetails"
        android:gravity="center"
        android:text="@string/mcpDetails"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeDetails" />

    <LinearLayout
        style="@style/detailDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDoneDetailsEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/marginStartButtonDetailsEmployee"
            android:layout_weight="5"
            android:background="@drawable/no_sharp_corner_garbage_color"
            android:text="@string/doneDetailsEmployee" />

        <Button
            android:id="@+id/btnWorkingDetailsEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/marginStartButtonDetailsEmployee"
            android:layout_weight="5"
            android:background="@drawable/no_sharp_corner_garbage_color"
            android:text="@string/workingDetailsEmployee" />

        <ImageButton
            android:id="@+id/ibBackPressDetailsEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/marginStartButtonDetailsEmployee"
            android:layout_weight="1"
            android:background="@drawable/no_sharp_corner_back_icon"
            android:src="@drawable/back_icon" />

    </LinearLayout>

</LinearLayout>